@@ -1,0 +1,48 @@
+<?php
+/*
+ * Copyright (c) 2014 Palo Alto Networks, Inc. <info@paloaltonetworks.com>
+ * Author: Christophe Painchaud cpainchaud _AT_ paloaltonetworks.com
+ *
+ * Permission to use, copy, modify, and distribute this software for any
+ * purpose with or without fee is hereby granted, provided that the above
+ * copyright notice and this permission notice appear in all copies.
+
+ * THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
+ * WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
+ * MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
+ * ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
+ * WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
+ * ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
+ * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
+*/
+
+class EthernetInterface
+{
+    use PathableName;
+    use ReferencableObject;
+
+    /**
+     * @var null|DOMNode
+     */
+    public $xmlroot = null;
+
+    /**
+     * @var EthernetInterfaceStore
+     */
+    public $owner;
+
+
+    public $type = 'tmp';
+
+    /**
+     * @param string $name
+     * @param EthernetInterfaceStore $owner
+     */
+    function EthernetInterface($name, $owner)
+    {
+        $this->name = $name;
+        $this->owner = $owner;
+    }
+
+
+}
